changed the animation hover of the filter buttons

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <h2 class="section-title text-style-bold">Чем мы занимаемся</h2>
         <ul class="list specializing">
           <li class="item">
-            <figure>
+            <figure class="activity">
               <img src="./img/macbook.jpg" alt="ноутбук" />
               <figcaption class="activity-list text-style-bold">
                 Десктопные приложения
@@ -131,7 +131,7 @@
             </figure>
           </li>
           <li class="item">
-            <figure>
+            <figure class="activity">
               <img src="./img/phone.jpg" alt="мобильный телефон" />
               <figcaption class="activity-list text-style-bold">
                 Мобильные приложения
@@ -139,7 +139,7 @@
             </figure>
           </li>
           <li class="item">
-            <figure>
+            <figure class="activity">
               <img src="./img/mac.jpg" alt="моноблок mac" />
               <figcaption class="activity-list text-style-bold">
                 Дизайнерские решения
