--- a/portfolio.html
+++ b/portfolio.html
@@ -60,111 +60,138 @@
         <div class="container container-portfolio ">
             <section>
                 <ul class="list portfolio-list">
-                    <li class="item"><a href="#">
-                            <img src="./img/technokryak.jpg" alt="ноутбук">
+                    <li class="item"><a href="#" class="portfolio-link-card">
+                            <div class="overlay-portfolio">
+                                <img src="./img/technokryak.jpg" alt="ноутбук">
+                                <p class="portfolio-description">Технокряк это современная площадка распространения
+                                    коронавируса.
+                                    Компании используют эту платформу для
+                                    цифрового шпионажа и атак на защищённые сервера конкурентов
+                                </p>
+                            </div>
                             <h2 class="portfolio-title text-style-bold">Технокряк</h2>
                             <p class="category-portfolio">Веб-сайт</p>
-                            <p class="portfolio-description">Технокряк это современная площадка распространения
-                                коронавируса.
-                                Компании используют эту платформу для
-                                цифрового шпионажа и атак на защищённые сервера конкурентов
-                            </p>
+
                         </a>
                     </li>
 
-                    <li class="item"><a href="#">
-                            <img src="./img/poster-new-orlean.jpg" alt="баскетболл">
+                    <li class="item"><a href="#" class="portfolio-link-card">
+                            <div class="overlay-portfolio">
+                                <img src="./img/poster-new-orlean.jpg" alt="баскетболл">
+                                <p class="portfolio-description">Технокряк это современная площадка распространения
+                                    коронавируса.
+                                    Компании используют эту платформу для
+                                    цифрового шпионажа и атак на защищённые сервера конкурентов
+                                </p>
+                            </div>
                             <h2 class="portfolio-title text-style-bold">Постер New Orlean vs Golden Star</h2>
                             <p class="category-portfolio">Дизайн</p>
-                            <p class="portfolio-description">Технокряк это современная площадка распространения
-                                коронавируса.
-                                Компании используют эту платформу для
-                                цифрового шпионажа и атак на защищённые сервера конкурентов
-                            </p>
                         </a>
                     </li>
 
-                    <li class="item"><a href="#">
-                            <img src="./img/seafood.jpg" alt="логотоп ресторана">
+                    <li class="item"><a href="#" class="portfolio-link-card">
+                            <div class="overlay-portfolio">
+
+                                <img src="./img/seafood.jpg" alt="логотоп ресторана">
+                                <p class="portfolio-description">Технокряк это современная площадка распространения
+                                    коронавируса.
+                                    Компании используют эту платформу для
+                                    цифрового шпионажа и атак на защищённые сервера конкурентов
+                                </p>
+                            </div>
+
                             <h2 class="portfolio-title text-style-bold">Ресторан Seafood </h2>
                             <p class="category-portfolio">Приложение</p>
-                            <p class="portfolio-description">Технокряк это современная площадка распространения
-                                коронавируса.
-                                Компании используют эту платформу для
-                                цифрового шпионажа и атак на защищённые сервера конкурентов
-                            </p>
                         </a>
                     </li>
 
-                    <li class="item"><a href="#">
-                            <img src="./img/project-prime.jpg" alt="наушники">
+                    <li class="item"><a href="#" class="portfolio-link-card">
+                            <div class="overlay-portfolio">
+
+                                <img src="./img/project-prime.jpg" alt="наушники">
+                                <p class="portfolio-description">Технокряк это современная площадка распространения
+                                    коронавируса.
+                                    Компании используют эту платформу для
+                                    цифрового шпионажа и атак на защищённые сервера конкурентов
+                                </p>
+                            </div>
+
                             <h2 class="portfolio-title text-style-bold">Проект Prime </h2>
                             <p class="category-portfolio">Маркетинг</p>
-                            <p class="portfolio-description">Технокряк это современная площадка распространения
-                                коронавируса.
-                                Компании используют эту платформу для
-                                цифрового шпионажа и атак на защищённые сервера конкурентов
-                            </p>
                         </a>
                     </li>
 
-                    <li class="item"><a href="#">
-                            <img src="./img/poject-boxes.jpg" alt="коробки">
+                    <li class="item"><a href="#" class="portfolio-link-card">
+                            <div class="overlay-portfolio">
+
+                                <img src="./img/poject-boxes.jpg" alt="коробки">
+                                <p class="portfolio-description">Технокряк это современная площадка распространения
+                                    коронавируса.
+                                    Компании используют эту платформу для
+                                    цифрового шпионажа и атак на защищённые сервера конкурентов
+                                </p>
+                            </div>
+
                             <h2 class="portfolio-title text-style-bold">Проект Boxes </h2>
                             <p class="category-portfolio">Приложение</p>
-                            <p class="portfolio-description">Технокряк это современная площадка распространения
-                                коронавируса.
-                                Компании используют эту платформу для
-                                цифрового шпионажа и атак на защищённые сервера конкурентов
-                            </p>
                         </a>
                     </li>
 
-                    <li class="item"><a href="#">
-                            <img src="./img/mac.jpg" alt="монитор">
+                    <li class="item"><a href="#" class="portfolio-link-card">
+                            <div class="overlay-portfolio">
+                                <img src="./img/mac.jpg" alt="монитор">
+
+                                <p class="portfolio-description">Технокряк это современная площадка распространения
+                                    коронавируса.
+                                    Компании используют эту платформу для
+                                    цифрового шпионажа и атак на защищённые сервера конкурентов
+                                </p>
+                            </div>
                             <h2 class="portfolio-title text-style-bold">Inspiration has no Borders </h2>
                             <p class="category-portfolio">Веб-сайт</p>
-                            <p class="portfolio-description">Технокряк это современная площадка распространения
-                                коронавируса.
-                                Компании используют эту платформу для
-                                цифрового шпионажа и атак на защищённые сервера конкурентов
-                            </p>
                         </a>
                     </li>
 
-                    <li class="item"><a href="#">
-                            <img src="./img/limited-edition.jpg" alt="книга">
+                    <li class="item"><a href="#" class="portfolio-link-card">
+                            <div class="overlay-portfolio">
+                                <img src="./img/limited-edition.jpg" alt="книга">
+                                <p class="portfolio-description">Технокряк это современная площадка распространения
+                                    коронавируса.
+                                    Компании используют эту платформу для
+                                    цифрового шпионажа и атак на защищённые сервера конкурентов
+                                </p>
+                            </div>
                             <h2 class="portfolio-title text-style-bold">Издание Limited Edition </h2>
                             <p class="category-portfolio">Дизайн</p>
-                            <p class="portfolio-description">Технокряк это современная площадка распространения
-                                коронавируса.
-                                Компании используют эту платформу для
-                                цифрового шпионажа и атак на защищённые сервера конкурентов
-                            </p>
                         </a>
                     </li>
 
-                    <li class="item"><a href="#">
-                            <img src="./img/limited-edition.jpg" alt="бирка">
+                    <li class="item"><a href="#" class="portfolio-link-card">
+                            <div class="overlay-portfolio">
+                                <img src="./img/project-lab.jpg" alt="бирка">
+                                <p class="portfolio-description">Технокряк это современная площадка распространения
+                                    коронавируса.
+                                    Компании используют эту платформу для
+                                    цифрового шпионажа и атак на защищённые сервера конкурентов
+                                </p>
+                            </div>
+
                             <h2 class="portfolio-title text-style-bold">Проект LAB </h2>
                             <p class="category-portfolio">Маркетинг</p>
-                            <p class="portfolio-description">Технокряк это современная площадка распространения
-                                коронавируса.
-                                Компании используют эту платформу для
-                                цифрового шпионажа и атак на защищённые сервера конкурентов
-                            </p>
                         </a>
                     </li>
 
-                    <li class="item"><a href="#">
-                            <img src="./img/macbook.jpg" alt="ноутбук">
+                    <li class="item"><a href="#" class="portfolio-link-card">
+                            <div class="overlay-portfolio">
+                                <img src="./img/macbook.jpg" alt="ноутбук">
+                                <p class="portfolio-description">Технокряк это современная площадка распространения
+                                    коронавируса.
+                                    Компании используют эту платформу для
+                                    цифрового шпионажа и атак на защищённые сервера конкурентов
+                                </p>
+                            </div>
                             <h2 class="portfolio-title text-style-bold">Growing Business </h2>
                             <p class="category-portfolio">Приложение</p>
-                            <p class="portfolio-description">Технокряк это современная площадка распространения
-                                коронавируса.
-                                Компании используют эту платформу для
-                                цифрового шпионажа и атак на защищённые сервера конкурентов
-                            </p>
                         </a>
                     </li>
 
